# TubeScribe

./: .gitignore  AGENTS.md  LICENSE  Phase1 copy.md  Phase1.md  Phase2.md  README.md  uv.toml
.github/workflows/: ci.yml
docs/: API.md  CONFIG.md  RELEASE.md  RELEASE_NOTES.md  release_github_v0.2.1.md  release_github_v0.2.2.md  release_github_v0.2.4.md  release_github_v0.3.0.md  release_github_v0.3.2.md  release_github_v0.3.3.md  release_github_v0.3.4.md  release_github_v0.3.5.md  release_github_v0.3.6.md
scripts/: integration_e2e.sh  summarize-file.sh
temp/: AGENTS.md  IMP.md  Phase1.md  Phase2.md  next.md
ytx/: .env.example  .gitignore  README.md  dQw4w9WgXcQ.json  pyproject.toml  vid123.json  vid_mgr.json  vid_mgr.srt  vid_srt.srt
ytx/src/ytx/: audio.py  cache.py  chapters.py  cli.py  config.py  downloader.py  errors.py  models.py  summarizer.py
ytx/src/ytx/engines/: base.py  cloud_base.py  deepgram_engine.py  gemini_engine.py  openai_engine.py  whisper_engine.py
ytx/src/ytx/exporters/: json_exporter.py  srt_exporter.py
ytx/tests/: conftest.py  test_cache_paths.py  test_cache_scan_videoid.py  test_chapters.py  test_chunked_offset.py  test_cli.py  test_cli_export_md.py  test_cli_export_md_cache.py  test_config.py  test_downloader_format.py  test_downloader_utils.py  test_engines.py  test_export_md_auto_chapters.py  test_export_md_exporter.py  test_export_md_utils.py  test_exporters.py  test_integration.py  test_models.py  test_perf.py
