[project]
name = "ytx"
version = "0.1.0"
description = "CLI to transcribe YouTube audio via Whisper (local) or Gemini (cloud)"
readme = "README.md"
authors = [
    { name = "Prateek", email = "19404752+prateekjain24@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.2.0",
    "httpx>=0.28.1",
    "orjson>=3.11.3",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "srt>=3.5.3",
    "tenacity>=9.1.2",
    "typer>=0.15.2",
    "yt-dlp>=2025.9.5",
]

[project.scripts]
ytx = "ytx.cli:app"

[project.urls]
Homepage = "https://github.com/yourname/ytx"
Repository = "https://github.com/yourname/ytx"
Issues = "https://github.com/yourname/ytx/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
